<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.apache.bifromq.tenon.kafka</groupId>
    <artifactId>tenon-kafka-source-and-sink</artifactId>
    <version>0.1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.outputTimestamp>2000-01-01T00:00:00Z</project.build.outputTimestamp>
        <maven.compiler.release>25</maven.compiler.release>
        <tenon.java.version>[25.0.3,25.0.4)</tenon.java.version>
        <tenon.maven.version>[3.9.16,3.9.17)</tenon.maven.version>
        <tenon.version>0.1.0</tenon.version>
        <tenon.programName>org.apache.bifromq.tenon.kafka.source-and-sink</tenon.programName>
        <protobuf.version>4.35.0</protobuf.version>
        <protobuf.maven.plugin.version>5.1.7</protobuf.maven.plugin.version>
        <junit.version>6.1.0</junit.version>
        <maven.clean.plugin.version>3.5.0</maven.clean.plugin.version>
        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.enforcer.plugin.version>3.6.3</maven.enforcer.plugin.version>
        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
        <maven.resources.plugin.version>3.5.0</maven.resources.plugin.version>
        <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
        <spotless.maven.plugin.version>3.6.0</spotless.maven.plugin.version>
        <google.java.format.version>1.35.0</google.java.format.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.bifromq.tenon</groupId>
            <artifactId>tenon-plugin-sdk</artifactId>
            <version>${tenon.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>4.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-build-toolchain</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>${tenon.java.version}</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>${tenon.maven.version}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven.clean.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>io.github.ascopes</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>${protobuf.maven.plugin.version}</version>
                <configuration>
                    <protoc kind="binary-maven">
                        <version>${protobuf.version}</version>
                    </protoc>
                    <embedSourcesInClassOutputs>false</embedSourcesInClassOutputs>
                    <fatalWarnings>true</fatalWarnings>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-plugin-payload</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>*_record_payload.proto</include>
                            </includes>
                            <outputDescriptorFile>
                                ${project.build.directory}/tenon-contract/payload.descriptor.pb
                            </outputDescriptorFile>
                            <outputDescriptorIncludeImports>true</outputDescriptorIncludeImports>
                            <outputDescriptorIncludeSourceInfo>true</outputDescriptorIncludeSourceInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.maven.plugin.version}</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>${google.java.format.version}</version>
                        </googleJavaFormat>
                        <forbidWildcardImports />
                        <removeUnusedImports />
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>check-java-format</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.bifromq.tenon</groupId>
                <artifactId>tenon-maven-plugin</artifactId>
                <version>${tenon.version}</version>
                <executions>
                    <execution>
                        <id>build-tenon-plugin</id>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                        <configuration>
                            <interface>source-and-sink</interface>
                            <programName>${tenon.programName}</programName>
                            <mainClass>org.apache.bifromq.tenon.kafka.Main</mainClass>
                            <platforms>
                                <platform>macos-arm64</platform>
                                <platform>macos-amd64</platform>
                                <platform>linux-arm64</platform>
                                <platform>linux-amd64</platform>
                            </platforms>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
